fixed small mistakes

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -28,7 +28,7 @@ Leading QA engineer
 
 </ProjectCard>
 
-<ProjectCard title="AO Raiffeisenbank Russia" link="https://raiffeisen.ru" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
+<ProjectCard title="Raiffeisenbank Russia" link="https://raiffeisen.ru" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
 QA automation engineer
 
 - manual functional services, web and API testing;
