--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -4,8 +4,8 @@ I am quality assurance engineer with experience in:
 - web, api, desktop and services testing;
 - manual API testing using Postman, SoapUI;
 - automated functional web UI testing using Selenium, SpecFlow and C# (a little bit experience with Python 3 and JavaScript (ES6) languages);
-- automated functional API testing using C#, SpecFlow and HttpClient/RabbitMQClient;
+- automated functional API testing using C#, SpecFlow and Http Client / RabbitMQ Client;
 - CI/CD: integration autotests with Bamboo;
-- databases: PostgreSQL, SQLite, MS Sql, DB2, Oracle;
+- databases: PostgreSQL, SQLite, MS SQL, IBM DB2, Oracle;
 - message queries: IBM Websphere MQ, Rabbit MQ;
 - load testing: manual using JMeter, automated testing using Gatling and Java (a little bit).
