Another project name fix

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -5,7 +5,7 @@ Junior software developer in test
 
 - testing flight simulator model;
 - made an automated testing software using C++ and Qt library;
-- project: helicopter Ka-52 flight simulator.
+- project: Ka-52 helicopter flight simulator.
 
 </ProjectCard>
 
