Contact info file update

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -3,3 +3,5 @@
 [Telegram: @andreyuniqueid](https://t.me/andreyuniqueid)
 
 [LinkedIn](https://www.linkedin.com/in/andrey-petrov-b5199095)
+
+[My GitHub projects](https://github.com/andrey5608)
