--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -12,7 +12,7 @@ Junior software developer in test
 <ProjectCard title="Inforser Engineering LLC" link="http://inforser.ru/" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
 QA engineer
 
-- manual functional desktop, services, web and API testing;
+- manual functional testing: desktop apps, services, web and API;
 - automated tesing using Autoit and C#;
 - project: Russian MFA government foreign passport system, websites q.midpass.ru, zp.midpass.ru;
 - project: PJSC Lukoil Oil Company transport logistic informational system with website.
@@ -22,7 +22,7 @@ QA engineer
 <ProjectCard title="Stream LLC, MTS Corp" link="https://mts.ru" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
 Leading QA engineer
 
-- manual functional services, web and API testing;
+- manual functional testing: services, web and API;
 - automated tesing using NUnit, C# and SpecFlow;
 - projects: websites mts.ru, lk.mts.ru and deti.mts.ru
 
@@ -31,7 +31,7 @@ Leading QA engineer
 <ProjectCard title="Raiffeisenbank Russia" link="https://raiffeisen.ru" bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)">
 QA automation engineer
 
-- manual functional services, web and API testing;
+- manual functional testing: services, web and API;
 - automated tesing using NUnit, C# and SpecFlow;
 - project: payroll banking service and website.
 
