Fix grammar mistakes

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -13,7 +13,7 @@ Junior software developer in test
 QA engineer
 
 - manual functional testing: desktop apps, services, web and API;
-- automated tesing using Autoit and C#;
+- automated testing using Autoit and C#;
 - project: Russian MFA government foreign passport system, websites q.midpass.ru, zp.midpass.ru;
 - project: PJSC Lukoil Oil Company transport logistic informational system with website.
 
@@ -23,7 +23,7 @@ QA engineer
 Leading QA engineer
 
 - manual functional testing: services, web and API;
-- automated tesing using NUnit, C# and SpecFlow;
+- automated testing using NUnit, C# and SpecFlow;
 - projects: websites mts.ru, lk.mts.ru and deti.mts.ru
 
 </ProjectCard>
@@ -32,7 +32,7 @@ Leading QA engineer
 QA automation engineer
 
 - manual functional testing: services, web and API;
-- automated tesing using NUnit, C# and SpecFlow;
+- automated testing using NUnit, C# and SpecFlow;
 - project: payroll banking service and website.
 
 </ProjectCard>
